# menu_app

./: .env.template  .gitignore  README.md
.github/workflows/: std_run.yml
backend/: pyproject.toml
backend/core/: settings.py  urls.py
backend/menu_app/: admin.py  apps.py  models.py  urls.py  views.py
backend/menu_app/templates/: base.html
backend/menu_app/templates/menu_app/: index.html  menu.html  menu_item.html
backend/menu_app/templatetags/: menu_tags.py
