[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aleksey <ranangariel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
